# gKarate

./: .clangd  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  clean.ps1  clean.sh  gDateDialog.cpp  gDateDialog.hpp  gDateDialog.ui  gKarate.pro  gMainWidget.cpp  gMainWidget.hpp  gMainWidget.ui  lang.qrc  main.cpp  main.qrc  main.rc  tableWidgetExport.cpp  tableWidgetExport.hpp  tableWidgetSetup.cpp  tableWidgetSetup.hpp
images/: gino_bogo.kra  karate_belds.kra  splash.kra
lang/: lang_it.qm  lang_it.ts
libs/: gFileDialog.cpp  gFileDialog.hpp  gXmlFile.cpp  gXmlFile.hpp  gXmlNode.cpp  gXmlNode.hpp  gXmlPair.cpp  gXmlPair.hpp
qxlsx/: xlsxcolor.cpp
widgets/: gTableWidget.cpp  gTableWidget.hpp  gTableWidgetBase.cpp  gTableWidgetBase.hpp  gTableWidgetCBox.cpp  gTableWidgetCBox.hpp  gTableWidgetCell.cpp  gTableWidgetCell.hpp  gTableWidgetDate.cpp  gTableWidgetDate.hpp  gTableWidgetIcon.cpp  gTableWidgetIcon.hpp  gTableWidgetItem.cpp  gTableWidgetItem.hpp  gTableWidgetRow.cpp  gTableWidgetRow.hpp  gTableWidgetRows.cpp  gTableWidgetRows.hpp
